--- a/function_app/requirements.txt
+++ b/function_app/requirements.txt
@@ -1,5 +1,6 @@
 azure-functions>=1.17.0,<2.0.0
 azure-storage-blob>=12.18.0,<13.0.0
+azure-storage-queue>=12.6.0,<13.0.0
 azure-search-documents>=11.4.0,<12.0.0
 azure-core>=1.30.0,<2.0.0
 psycopg2-binary>=2.9.9,<3.0.0
