--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lucide-react": "^0.462.0",
     "next": "^14.0.3",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -72,6 +73,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@azure/search-documents": "^12.1.0",
+    "@azure/storage-queue": "^12.25.0",
     "@eslint/js": "^9.9.0",
     "@swc/core": "^1.11.7",
     "@tailwindcss/typography": "^0.5.15",
