--- a/function_app/requirements.txt
+++ b/function_app/requirements.txt
@@ -11,4 +11,4 @@ python-multipart>=0.0.6
 azure-identity>=1.14.0,<2.0.0
 opencensus-ext-azure>=1.1.9,<2.0.0
 opencensus-ext-logging>=0.1.0,<0.2.0
-azure-ai-formrecognizer>=3.3.0,<4.0.0 
+azure-ai-documentintelligence
