db with backend

--- a/function_app/requirements.txt
+++ b/function_app/requirements.txt
@@ -12,3 +12,4 @@ azure-identity>=1.14.0,<2.0.0
 opencensus-ext-azure>=1.1.9,<2.0.0
 opencensus-ext-logging>=0.1.0,<0.2.0
 azure-ai-documentintelligence
+sqlalchemy>=2.0.0,<3.0.0
