--- a/function_app/requirements.txt
+++ b/function_app/requirements.txt
@@ -14,3 +14,7 @@ opencensus-ext-logging>=0.1.0,<0.2.0
 azure-ai-documentintelligence>=1.0.0
 sqlalchemy>=2.0.0,<3.0.0
 requests>=2.31.0,<3.0.0
+openai
+tenacity
+urllib3
+httpx
